--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
-    <h1>Welcome to my website!</h1>
-    <a href="http://127.0.0.1:8080/login">Login</a></br>
-    <a href="http://127.0.0.1:8080/register">Register</a></br>
+    <div class="container">
+        <h1 class="header">Welcome to my website!</h1>
+        <div class"links">
+            <a class="link" href="http://127.0.0.1:8080/login">Login</a>
+            <a class="link" href="http://127.0.0.1:8080/register">Register</a>
+        </div>
+    </div>
 </body>
 </html>
