Added basic configuration set up.

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,6 +12,6 @@
         <input type="text" placeholder="Enter password" name = "password"/>
         <p><input type="submit" value="Submit" /></p>
     </form>
-    <a href="http://192.168.1.218:8080/login">Have an account? Login!</a></br>
+    <a href="http://{{ip}}:{{port}}/login">Have an account? Login!</a></br>
 </body>
 </html>
