--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <h1 class="header">Welcome to my website!</h1>
-        <div class"links">
-            <a class="link" href="http://192.168.1.218:8080/login">Login</a>
-            <a class="link" href="http://192.168.1.218:8080/register">Register</a>
+        <div class="links">
+            <a class="link" href="http://{{ip}}:{{port}}/login">Login</a>
+            <a class="link" href="http://{{ip}}:{{port}}/register">Register</a>
         </div>
     </div>
 </body>
