--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,6 +12,6 @@
         <input type="text" placeholder="Enter password" name = "password"/>
         <input type="submit" value="Submit"/>
     </form>
-    <a href="http://192.168.1.218:8080/register">Don't have an account? Register!</a></br>
+    <a href="http://{{ip}}:{{port}}/register">Don't have an account? Register!</a></br>
 </body>
 </html>
